--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -134,7 +134,7 @@
 {% endif %}
 {% endmacro %}
 
-{% macro show_active_filters(posts, filters) %}
+{% macro active_filters(posts, filters) %}
 {% set active_filters = [] %}
 {% for filter in filters %}
     {% set _ignore = active_filters.extend(selected_filters_for_field(filter)) %}
@@ -177,4 +177,28 @@
     {% endfor %}
     </dl>
 {% endif %}
+{% endmacro %}
+
+{% macro filters(label, query, posts, filters, include) %}
+<div class="expandable">
+    <div class="expandable_header expandable_header__spaced">
+        <div class="expandable_header-right expandable_header-right__float-on-medium">
+            <button class="expandable_target expandable_target__btn__secondary">
+                {{ label }}
+                <span class="expandable_cue-open">
+                    <span class="btn_icon__right cf-icon cf-icon-down"></span>
+                </span>
+                <span class="expandable_cue-close">
+                    <span class="btn_icon__right cf-icon cf-icon-up"></span>
+                </span>
+            </button>
+        </div>
+        {{ active_filters(posts, filters) }}
+    </div>
+    <div class="expandable_content padded-container">
+        <div class="padded-container_body">
+            {% include include %}
+        </div>
+    </div>
+</div><!-- END .expandable -->
 {% endmacro %}
