--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -134,6 +134,43 @@
 {% endif %}
 {% endmacro %}
 
+{# Create an expandble of post filters when given:
+   - label: The label you want on the expandable button
+   - query: The post type query object like `queries.posts`.
+   - posts: The query object search results.
+            Used for getting the list of currently applied filters.
+   - filters: An array of the filters that you want to show the results of.
+              Note that currently this does not actually place the filters on
+              the page. That is doen through the next argument, `include`.
+   - include: An HTML file containing the form of filters.
+              A future version of this macro should take the list from `filters`
+              and create this form dynamically.
+#}
+{% macro filters(label, query, posts, filters, include) %}
+<div class="expandable">
+    <div class="expandable_header expandable_header__spaced">
+        <div class="expandable_header-right expandable_header-right__float-on-medium">
+            <button class="expandable_target expandable_target__btn__secondary">
+                {{ label }}
+                <span class="expandable_cue-open">
+                    <span class="btn_icon__right cf-icon cf-icon-down"></span>
+                </span>
+                <span class="expandable_cue-close">
+                    <span class="btn_icon__right cf-icon cf-icon-up"></span>
+                </span>
+            </button>
+        </div>
+        {{ active_filters(posts, filters) }}
+    </div>
+    <div class="expandable_content padded-container">
+        <div class="padded-container_body">
+            {% include include %}
+        </div>
+    </div>
+</div><!-- END .expandable -->
+{% endmacro %}
+
+{# A helper macro for filters() #}
 {% macro active_filters(posts, filters) %}
 {% set active_filters = [] %}
 {% for filter in filters %}
@@ -177,28 +214,4 @@
     {% endfor %}
     </dl>
 {% endif %}
-{% endmacro %}
-
-{% macro filters(label, query, posts, filters, include) %}
-<div class="expandable">
-    <div class="expandable_header expandable_header__spaced">
-        <div class="expandable_header-right expandable_header-right__float-on-medium">
-            <button class="expandable_target expandable_target__btn__secondary">
-                {{ label }}
-                <span class="expandable_cue-open">
-                    <span class="btn_icon__right cf-icon cf-icon-down"></span>
-                </span>
-                <span class="expandable_cue-close">
-                    <span class="btn_icon__right cf-icon cf-icon-up"></span>
-                </span>
-            </button>
-        </div>
-        {{ active_filters(posts, filters) }}
-    </div>
-    <div class="expandable_content padded-container">
-        <div class="padded-container_body">
-            {% include include %}
-        </div>
-    </div>
-</div><!-- END .expandable -->
 {% endmacro %}
