Small fix to doc outline.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,5 +1,5 @@
     <footer class="footer" role="contentinfo">
-        <div class="wrapper wrapper__match-content">
+        <aside class="wrapper wrapper__match-content">
 
             <div class="footer-pre">
 
@@ -241,5 +241,5 @@
 
             </div><!-- END .footer-post -->
             
-        </div><!-- END .wrapper.wrapper__match-content -->
+        </aside><!-- END .wrapper.wrapper__match-content -->
     </footer><!-- END .footer -->
