Splash page without graphs and with SVG illustration

--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -596,7 +596,7 @@
   .primary-nav_top-level-list &gt; .list_item &gt; .list_link {
     display: block;
     padding-bottom: 30px;
-    margin: 0 15px;
+    margin: 0 0 0 15px;
     font-size: 1.125em;
   }
   .desktop-menu_full-wrapper {
@@ -678,6 +678,11 @@
     margin-bottom: 0;
   }
   .desktop-menu_horizontal-list.list__horizontal &gt; .list_item {
+    margin: 0 15px;
+  }
+}
+@media only all and (min-width: 64em) {
+  .primary-nav_top-level-list &gt; .list_item &gt; .list_link {
     margin: 0 15px;
   }
 }</code></pre>
