--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -469,7 +469,7 @@
 .primary-nav_top-level-list &gt; .list_item &gt; .list_link {
   display: block;
   padding-bottom: 30px;
-  margin: 0 15px;
+  margin: 0 0 0 15px;
   font-size: 1.125em;
 }
 
