--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1466,7 +1466,7 @@
         margin-bottom: unit(10x / @base-font-size-px, em);
     }
 
-    .respond-to-max(767px, {
+    .respond-to-max(599px, {
         border-top: 1px dotted @pacific;
 
         .list_item {
@@ -1476,11 +1476,12 @@
 
         .list_link {
             display: block;
-            padding: unit(10px / @base-font-size-px, em) 0;
+            padding-top: unit(10px / @base-font-size-px, em);
+            padding-bottom: unit(10px / @base-font-size-px, em);
         }
     });
 
-    .respond-to-min(768px, {
+    .respond-to-min(600px, {
         &.list__icons {
             .list_link {
                 margin-bottom: unit(15px / @base-font-size-px, em);
