--- a/_layouts/calendar-event-filters-form.html
+++ b/_layouts/calendar-event-filters-form.html
@@ -27,14 +27,14 @@
             =================
         -->
         <!-- No-JS date input -->
-        {% set from_date = selected_filters_for_field('range_dtstart_gte')[0] %}
+        {% set from_date = selected_filters_for_field('range_date_gte')[0] %}
         <div class="form-l_col-1-3"
              id="filter_range_date_gte-container">
-            <label for="filter_range_dtstart_gte">
+            <label for="filter_range_date_gte">
                 From:
             </label>
             <input id="filter_range_date_gte"
-                   name="filter_range_dtstart_gte"
+                   name="filter_range_date_gte"
                    type="text"
                    value="{{ from_date if from_date }}"
                    placeholder="YYYY-MM">
@@ -84,14 +84,14 @@
             ===============
         -->
         <!-- No-JS date input -->
-        {% set to_date = selected_filters_for_field('range_dtend_lte')[0] %}
+        {% set to_date = selected_filters_for_field('range_date_lte')[0] %}
         <div class="form-l_col-1-3"
              id="filter_range_date_lte-container">
-            <label for="filter_range_dtend_lte">
+            <label for="filter_range_date_lte">
                 To:
             </label>
             <input id="filter_range_date_lte"
-                   name="filter_range_dtend_lte"
+                   name="filter_range_date_lte"
                    type="text"
                    value="{{ to_date if to_date }}"
                    placeholder="YYYY-MM">
