--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -134,19 +134,24 @@
 {% endif %}
 {% endmacro %}
 
-{# Create an expandble of post filters when given:
-   - label: The label you want on the expandable button
-   - query: The post type query object like `queries.posts`.
-   - posts: The query object search results.
-            Used for getting the list of currently applied filters.
-   - filters: An array of the filters that you want to show the results of.
-              Note that currently this does not actually place the filters on
-              the page. That is doen through the next argument, `include`.
-   - include: An HTML file containing the form of filters.
-              A future version of this macro should take the list from `filters`
-              and create this form dynamically.
-#}
-{% macro filters(label, query, posts, filters, include) %}
+
+{# ==========================================================================
+   filters()
+
+   Create an expandble of post filters when given:
+
+   label:       The label you want on the expandable button
+   query:       The post type query object like `queries.posts`.
+   posts:       The query object search results.
+                Used for getting the list of currently applied filters.
+   doc_type:    The type of document that posts contains.
+                Mainly used for conditionals needed to support newsroom filters.
+   filters:     An array of the filters that you want to show the results of.
+                Possible values: author, calendar, category, date_range, tags.
+   ========================================================================== #}
+
+{% macro filters(label, query, posts, doc_type, filters) %}
+
 <div class="expandable">
     <div class="expandable_header expandable_header__spaced">
         <div class="expandable_header-right expandable_header-right__float-on-medium">
@@ -164,24 +169,35 @@
     </div>
     <div class="expandable_content padded-container">
         <div class="padded-container_body">
-            {% include include %}
+            {{ filters_form(filters, query, doc_type) }}
         </div>
     </div>
 </div><!-- END .expandable -->
+
 {% endmacro %}
 
-{# A helper macro for filters() #}
+
+{# A helper macro for filters()
+   ========================================================================== #}
 {% macro active_filters(posts, filters) %}
+
 {% set active_filters = [] %}
 {% set active_date_filters = [] %}
+
+{# This is a hack. `_ignore` is a variable we will never use but we can use
+   its var expression as a means to write the expression needed to update
+   `active_date_filters`. #}
 {% for filter in filters %}
-    {% if filter == 'range_date_gte' or filter == 'range_date_lte' %}
-        {% set _ignore = active_date_filters.extend(selected_filters_for_field(filter)) %}
+    {% if filter == 'range_date' %}
+        {% set _ignore = active_date_filters.extend(selected_filters_for_field('range_date_gte')) %}
+        {% set _ignore = active_date_filters.extend(selected_filters_for_field('range_date_lte')) %}
     {% else %}
         {% set _ignore = active_filters.extend(selected_filters_for_field(filter)) %}
     {% endif %}
 {% endfor %}
+
 {% set active_filters_total = active_filters|length + active_date_filters|length %}
+
 {% if active_filters_total > 0 %}
     <dl class="filtered-by filtered-by__show-on-medium filtered-by__align-with-btn list list__horizontal">
         <dt class="list_item">
@@ -215,4 +231,238 @@
     {% endfor %}
     </dl>
 {% endif %}
+
+{% endmacro %}
+
+
+{# A helper macro for filters()
+   ========================================================================== #}
+{% macro filters_form(filters, query, doc_type) %}
+
+<form id="post-filters-form" method="get">
+    <div class="form-l form-l__float form-l__flush">
+{% for filter in filters %}
+
+    {# Category filters #}
+    {% if filter == 'category' %}
+        <div class="form-l_col form-l_col-1-3">
+            <div class="form-group">
+                <label class="form-label-header">
+                    Categories
+                </label>
+            {% if doc_type == 'newsroom' -%}
+                {% set categories = query.possible_values_for('category', doc_type='newsroom')|sort(attribute='term') %}
+            {%- else -%}
+                {% set categories = query.possible_values_for('category')|sort(attribute='term') %}
+            {% endif -%}
+            {% for category in categories -%}
+                <label class="form-group_item">
+                    {{ filter_checkbox('category', category.term)|safe }}
+                </label>
+            {% endfor %}
+            {% if doc_type == 'newsroom' -%}
+                <label class="form-group_item">
+                    {{ filter_checkbox('type', 'post', 'Blog')|safe }}
+                </label>
+            {%- endif %}
+            </div>
+        </div>
+
+    {# Calendar filters #}
+    {% elif filter == 'calendar' %}
+        <div class="form-l_col form-l_col-1-3">
+            <div class="form-group">
+                <label class="form-label-header">
+                    Calendars
+                </label>
+            {% for calendar in query.possible_values_for('calendar')|sort(attribute='term') -%}
+                <label class="form-group_item">
+                    {{ filter_checkbox('calendar', calendar.term)|safe }}
+                </label>
+            {% endfor %}
+            </div>
+        </div>
+
+    {# Tag filters #}
+    {% elif filter == 'tags' %}
+        <div class="form-l_col form-l_col-1-3">
+            <label class="form-label-header" for="filter_tags">
+                Topics
+            </label>
+            <select class="chosen-select"
+                    id="filter_tags"
+                    name="filter_tags"
+                    multiple
+                    data-placeholder="Search for topics">
+                <optgroup label="Most frequent">
+            {% if doc_type == 'newsroom' -%}
+                {% set possible_tags = query.possible_values_for('tags', doc_type='newsroom') %}
+            {%- else -%}
+                {% set possible_tags = query.possible_values_for('tags') %}
+            {% endif -%}
+            {# Top 3 tags come first #}
+            {%- for tags in possible_tags -%}
+                {%- if loop.index < 4 -%}
+                    {{ filter_option('tags', tags.term)|safe }}
+                {%- endif -%}
+            {%- endfor -%}
+                </optgroup>
+                <optgroup label="All other topics">
+            {# Then the rest of the tags #}
+            {%- for tags in possible_tags[3:]|sort(attribute='term') -%}
+                    {{ filter_option('tags', tags.term)|safe }}
+            {%- endfor -%}
+                </optgroup>
+            </select>
+        </div>
+
+    {# Author filters #}
+    {% elif filter == 'author' %}
+        <div class="form-l_col form-l_col-1-3">
+            <label class="form-label-header" for="filter_author">
+                Author
+            </label>
+            <select class="chosen-select"
+                    id="filter_author"
+                    name="filter_author"
+                    multiple
+                    data-placeholder="Search for authors">
+            {% if doc_type == 'newsroom' -%}
+                {% set authors = query.possible_values_for('author', doc_type='newsroom')|sort(attribute='term') %}
+            {%- else -%}
+                {% set authors = query.possible_values_for('author')|sort(attribute='term') %}
+            {% endif -%}
+            {% for author in authors %}
+                {{ filter_option('author', author.term)|safe }}
+            {% endfor %}
+            </select>
+        </div>
+
+    {# Date range filters #}
+    {% elif filter == 'range_date' %}
+        <label class="form-l_col-2-3 form-label-header">
+            Date range
+        </label>
+        <!-- No-JS date input -->
+        {% set from_date = selected_filters_for_field('range_date_gte')[0] %}
+        <div class="form-l_col-1-3"
+             id="filter_range_date_gte-container">
+             <label for="filter_range_date_gte">
+                 From:
+             </label>
+            <input id="filter_range_date_gte"
+                   name="filter_range_date_gte"
+                   type="text"
+                   value="{{ from_date if from_date }}"
+                   placeholder="YYYY-MM">
+        </div>
+        <!-- JS date input -->
+        <div class="form-l_col-1-3 input-group"
+             id="filter_range_date_gte-replacement"
+             style="display:none;">
+            <label for="filter_from_month">
+                From:
+            </label>
+            <div class="input-group_item custom-select">
+                <select class="form-input-month"
+                        id="filter_from_month">
+                    <option value="">Month</option>
+                    <option value="01">Jan</option>
+                    <option value="02">Feb</option>
+                    <option value="03">Mar</option>
+                    <option value="04">Apr</option>
+                    <option value="05">May</option>
+                    <option value="06">Jun</option>
+                    <option value="07">Jul</option>
+                    <option value="08">Aug</option>
+                    <option value="09">Sep</option>
+                    <option value="10">Oct</option>
+                    <option value="11">Nov</option>
+                    <option value="12">Dec</option>
+                </select>
+                <span class="custom-select_icon cf-icon cf-icon-down"></span>
+            </div>
+            <div class="input-group_item custom-select">
+                <select class="form-input_year"
+                        id="filter_from_year">
+                    <option value="">Year</option>
+                {%- for year in range(2011, current_date|date("%Y")|int + 1) -%}
+                    <option value="{{ year }}">{{ year }}</option>
+                {%- endfor -%}
+                </select>
+                <span class="custom-select_icon cf-icon cf-icon-down"></span>
+            </div>
+        </div> <!-- END js date input -->
+        <!-- END "From" date input -->
+        <!--
+            ===============
+            "To" date input
+            ===============
+        -->
+        <!-- No-JS date input -->
+        {% set to_date = selected_filters_for_field('range_date_lte')[0] %}
+        <div class="form-l_col-1-3"
+             id="filter_range_date_lte-container">
+             <label for="filter_range_date_lte">
+                 To:
+             </label>
+            <input id="filter_range_date_lte"
+                   name="filter_range_date_lte"
+                   type="text"
+                   value="{{ to_date if to_date }}"
+                   placeholder="YYYY-MM">
+        </div>
+        <!-- JS date input -->
+        <div class="form-l_col-1-3 input-group"
+             id="filter_range_date_lte-replacement"
+             style="display:none;">
+            <label for="filter_to_month">
+                To:
+            </label>
+            <div class="custom-select input-group_item">
+                <select class="form-input-month"
+                        id="filter_to_month">
+                    <option value="">Month</option>
+                    <option value="01">Jan</option>
+                    <option value="02">Feb</option>
+                    <option value="03">Mar</option>
+                    <option value="04">Apr</option>
+                    <option value="05">May</option>
+                    <option value="06">Jun</option>
+                    <option value="07">Jul</option>
+                    <option value="08">Aug</option>
+                    <option value="09">Sep</option>
+                    <option value="10">Oct</option>
+                    <option value="11">Nov</option>
+                    <option value="12">Dec</option>
+                </select>
+                <span class="custom-select_icon cf-icon cf-icon-down"></span>
+            </div>
+            <div class="custom-select input-group_item">
+                <select class="form-input_year"
+                        id="filter_to_year">
+                    <option value="">Year</option>
+                {%- for year in range(2011, current_date|date("%Y")|int + 1) %}
+                    <option value="{{ year }}">{{ year }}</option>
+                {%- endfor %}
+                </select>
+                <span class="custom-select_icon cf-icon cf-icon-down"></span>
+            </div>
+        </div> <!-- END JS date input -->
+        <!-- END "To" date input -->
+
+    {% endif %}
+{% endfor %}
+    </div> <!-- END .form-l__flush -->
+
+    <div class="form-actions form-actions__right-on-med">
+        <input class="btn btn__warning btn__link form-actions_item js-form_clear"
+               type="button"
+               value="Clear filters">
+        <input class="btn form-actions_item"
+               type="submit"
+               value="Apply filters">
+    </div>
+
+</form>
 {% endmacro %}
