--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -111,6 +111,7 @@
 .wrapper__match-content {
   padding-left: 30px;
   padding-right: 30px;
+  max-width: 1140px;
 }
 
 .lt-ie9 .wrapper {
@@ -227,7 +228,7 @@
 
 .header_misc {
   display: block;
-  margin: 30px 15px 15px;
+  margin: 52px 15px 15px;
   position: absolute;
   top: 0;
   right: 15px;
@@ -437,7 +438,7 @@
 
 .primary-nav {
   position: absolute;
-  top: 116px;
+  top: 100px;
   right: 0;
   left: 0;
   z-index: 100;
