--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -111,6 +111,7 @@
   .wrapper__match-content {
     padding-left: 30px;
     padding-right: 30px;
+    max-width: 1140px;
   }
 }
 .lt-ie9 .wrapper {
@@ -229,7 +230,7 @@
 @media only all and (min-width: 50.0625em) {
   .header_misc {
     display: block;
-    margin: 30px 15px 15px;
+    margin: 52px 15px 15px;
     position: absolute;
     top: 0;
     right: 15px;
@@ -569,7 +570,7 @@
   }
   .primary-nav {
     position: absolute;
-    top: 116px;
+    top: 100px;
     right: 0;
     left: 0;
     z-index: 100;
