--- a/static/css/beta.less
+++ b/static/css/beta.less
@@ -8,7 +8,8 @@
     // top padding reduced from 30px to compensate for line-height on title
     padding: unit(25px / @base-font-size-px, em) (@grid_gutter-width / 2);
     background: @teal-20;
-    background-image: url('/static/img/beta-illustration.svg');
+    background-image: url('/static/img/beta-illustration_sm.png');
+    background-image: url('/static/img/beta-illustration.svg'), none;
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: 1176px;
@@ -17,7 +18,8 @@
     .respond-to-min(601px, {
         min-height: 520px;
         padding: @grid_gutter-width;
-        // background-image: url('/static/img/beta-illustration_lg.png');
+        background-image: url('/static/img/beta-illustration_lg.png');
+        background-image: url('/static/img/beta-illustration.svg'), none;
         background-size: 1470px;
     });
 
@@ -56,5 +58,60 @@
 
     .respond-to-min(1024px, {
         width: 32em;
+    });
+}
+
+.progress-charts {
+    .u-clearfix();
+}
+
+.progress-charts_container {
+    box-sizing: border-box;
+    margin-bottom: 1em;
+    position: relative;
+    background-size: cover;
+    .u-clearfix();
+
+    .respond-to-min(480px, {
+        width: 33.333333333%;
+        height: 150px;
+        padding: 0 1em;
+        float: left;
+        text-align: center;
+    });
+
+    .respond-to-min(768px, {
+        width: 20%;
+    });
+}
+
+.progress-charts_chart {
+    .respond-to-max(479px, {
+        margin-right: 1em;
+        float: left;
+        //clear: left;
+    });
+}
+
+.chart-bg {
+    position: relative;
+    background: #E3E4E5;
+    width: 100%;
+    height: 100%;
+}
+
+.chart-pct {
+    position: absolute;
+    bottom: 0;
+    background: #FF931B;
+    width: 100%;
+}
+
+.chart-name {
+    .h5();
+
+    .respond-to-max(479px, {
+        position: relative;
+        top: 39px; // Half height of graph (50px) - half of line-height (11px)
     });
 }
