--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6828,71 +6828,159 @@ select[multiple].focus {
    demo
    ========================================================================== */
 
-.demo-banner {
-  padding: 0.5em 1em;
-  background: #43484e;
-  color: #ffffff;
+.beta-banner {
+  padding: 30px 0;
+  background: #ffecd1;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
 }
 
-.demo-banner em,
-.demo-banner i {
+.beta-banner em,
+.beta-banner i {
   font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
   font-style: italic;
   font-weight: normal;
 }
 
-.lt-ie9 .demo-banner em,
-.lt-ie9 .demo-banner i {
+.lt-ie9 .beta-banner em,
+.lt-ie9 .beta-banner i {
   font-style: normal !important;
 }
 
-.demo-banner strong,
-.demo-banner b {
+.beta-banner strong,
+.beta-banner b {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
 }
 
-.lt-ie9 .demo-banner strong,
-.lt-ie9 .demo-banner b {
+.lt-ie9 .beta-banner strong,
+.lt-ie9 .beta-banner b {
   font-weight: normal !important;
 }
 
-.demo-banner_back-link {
-  padding: 0.25em 0;
-  margin-right: 1em;
-}
-
-.demo-banner_back-link:link,
-.demo-banner_back-link:visited {
-  color: #7fb8e6;
-}
-
-.demo-banner_back-link:hover,
-.demo-banner_back-link:focus {
-  color: #328ed8;
-}
-
-.demo-banner_back-link:active {
-  color: #babbbd;
-}
-
-.demo-banner_back-link {
-  padding: 0;
-  float: left;
-}
-
-.demo-banner b {
+.beta-banner_head {
+  margin-top: 0;
+  margin-bottom: 0.27777778em;
+  font-size: 1.125em;
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
+  line-height: 1.22222222;
 }
 
-.lt-ie9 .demo-banner b {
+.lt-ie9 .beta-banner_head {
   font-weight: normal !important;
+}
+
+.beta-banner_icon {
+  color: #ff9e1b;
+}
+
+.beta-banner_desc {
+  margin-bottom: 0;
+}
+
+.beta-banner_close-btn {
+  width: 100%;
+  margin-top: 15px;
+}
+
+.beta-banner_close-btn,
+.beta-banner_close-btn:link,
+.beta-banner_close-btn:visited {
+  background-color: #75787b;
+  color: #ffffff;
+}
+
+.beta-banner_close-btn:hover,
+.beta-banner_close-btn.hover {
+  background-color: #919395;
+}
+
+.beta-banner_close-btn:focus,
+.beta-banner_close-btn.focus {
+  background-color: #919395;
+  outline-color: #75787b;
+}
+
+.beta-banner_close-btn:active,
+.beta-banner_close-btn.active {
+  background-color: #43484e;
+}
+
+.beta-banner_close-btn {
+  padding: 0;
+  border-bottom: 1px dotted #0072ce;
+  border-radius: 0;
+  margin: 0.57142857em 0;
+  width: auto;
+  padding: 15px;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 0 !important;
+  text-transform: lowercase;
+}
+
+.beta-banner_close-btn,
+.beta-banner_close-btn:link,
+.beta-banner_close-btn:visited {
+  background-color: transparent;
+  color: #0072ce;
+}
+
+.beta-banner_close-btn:hover,
+.beta-banner_close-btn.hover {
+  border-bottom: 1px solid #7fb8e6;
+  background-color: transparent;
+  color: #7fb8e6;
+}
+
+.beta-banner_close-btn:focus,
+.beta-banner_close-btn.focus {
+  border-bottom-style: solid;
+  background-color: transparent;
+  outline: thin dotted #0072ce;
+}
+
+.beta-banner_close-btn:active,
+.beta-banner_close-btn.active {
+  border-bottom: 1px solid #002d72;
+  background-color: transparent;
+  color: #002d72;
+}
+
+.beta-banner_close-btn:visited,
+.beta-banner_close-btn.visited {
+  border-color: #101820;
+  color: #101820;
+}
+
+.beta-banner_close-btn:hover,
+.beta-banner_close-btn.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.beta-banner_close-btn:focus,
+.beta-banner_close-btn.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.beta-banner_close-btn:active,
+.beta-banner_close-btn.active {
+  border-color: #101820;
+  color: #101820;
+}
+
+.beta-banner_close-btn {
+  top: -30px;
 }
 
 .demo-placeholder {
@@ -7678,6 +7766,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .wrapper__match-content {
   padding-left: 30px;
   padding-right: 30px;
+  max-width: 1140px;
 }
 
 .lt-ie9 .wrapper {
@@ -7756,7 +7845,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 
 .header_misc {
   display: block;
-  margin: 30px 15px 15px;
+  margin: 52px 15px 15px;
   position: absolute;
   top: 0;
   right: 15px;
@@ -7963,7 +8052,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 
 .primary-nav {
   position: absolute;
-  top: 116px;
+  top: 100px;
   right: 0;
   left: 0;
   z-index: 100;
@@ -11805,6 +11894,7 @@ a.category-slug.active {
 .hero_wrapper__match-content {
   padding-left: 30px;
   padding-right: 30px;
+  max-width: 1140px;
 }
 
 .hero_img-container {
@@ -15832,7 +15922,8 @@ a.focus .summary_header {
   min-height: 420px;
   padding: 1.5625em 15px;
   background: #ccdfdf;
-  background-image: url('/static/img/beta-illustration.svg');
+  background-image: url('/static/img/beta-illustration_sm.png');
+  background-image: url('/static/img/beta-illustration.svg'), none;
   background-repeat: no-repeat;
   background-position: center bottom;
   -webkit-background-size: 1176px;
@@ -15843,6 +15934,8 @@ a.focus .summary_header {
 .beta-hero {
   min-height: 520px;
   padding: 30px;
+  background-image: url('/static/img/beta-illustration_lg.png');
+  background-image: url('/static/img/beta-illustration.svg'), none;
   -webkit-background-size: 1470px;
   background-size: 1470px;
 }
@@ -15946,5 +16039,77 @@ a.focus .summary_header {
 
 .lt-ie9 .beta-hero_desc strong,
 .lt-ie9 .beta-hero_desc b {
+  font-weight: normal !important;
+}
+
+.progress-charts:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.lt-ie8 .progress-charts {
+  zoom: 1;
+}
+
+.progress-charts_container {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-bottom: 1em;
+  position: relative;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.progress-charts_container:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.lt-ie8 .progress-charts_container {
+  zoom: 1;
+}
+
+.progress-charts_container {
+  width: 33.333333333%;
+  height: 150px;
+  padding: 0 1em;
+  float: left;
+  text-align: center;
+}
+
+.progress-charts_container {
+  width: 20%;
+}
+
+.chart-bg {
+  position: relative;
+  background: #E3E4E5;
+  width: 100%;
+  height: 100%;
+}
+
+.chart-pct {
+  position: absolute;
+  bottom: 0;
+  background: #FF931B;
+  width: 100%;
+}
+
+.chart-name {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0.35714286em;
+  font-size: 0.875em;
+  line-height: 1.57142857;
+}
+
+.lt-ie9 .chart-name {
   font-weight: normal !important;
 }
